--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -52,3 +52,13 @@ cursor: pointer;
     font-size: 18px;
 
 }
+
+.container .correct{
+    background: #dffff2;
+    border-color:#00d397;
+}
+
+.container .wrong{
+    background: #FFEBEB;
+    border-color:#FF4A4A;
+}
